Atualização em Projetos

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 
             <div class="portfolio-box">
                 <a href="https://leonardolira01.github.io/Cardapio-Digital-Projeto-Lira/" target="_blank">
-                <img src="./assets/Cardápio.png" alt="Projeto de Cardapio">
+                <img src="./assets/Cardapio.png" alt="Projeto de Cardapio">
                 <div class="portfolio-layer">
-                    <h4>Cardápio</h4>
+                    <h4>Cardapio</h4>
                     <p>Interações entre os pratos principais, sobremesa e bebidas. <br>
                     Tecnologias: <b>Javascript, React.js, Vite</b></p>
                     <i class="fas fa-arrow-alt-circle-up"></i>
